- Add embedded modules config processing